changed home image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ header .logo-text-description {
 ==================================*/
 
 #home {
-    background: url(../img/home.gif) no-repeat center center;
+    background: url(../img/myhome.jpg) no-repeat center center;
     padding: 0;
     -webkit-background-size: cover;
     background-size: cover;
